[package]
name = "codehq-ts-api"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-cors = "*"
actix-web = "*"
actix-web-httpauth = "*"
alcoholic_jwt = "*"
chrono = "*"
dotenv = "*"
duct = "*"
env_logger = "*"
envy = "*"
lazy_static = "*"
log = "*"
openidconnect = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
